// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Builder (style1) > should build activities 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [],
    },
    "s2#B": {
      "id": "s2#B",
      "modelRef": "s2",
      "name": "B",
      "steps": [],
    },
    "s2.c2#C": {
      "id": "s2.c2#C",
      "modelRef": "s2.c2",
      "name": "C",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s1.c1": {
      "color": "primary",
      "description": null,
      "id": "s1.c1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
    "s2.c2": {
      "color": "primary",
      "description": null,
      "id": "s2.c2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build activities with steps (array) 1`] = `
{
  "activities": {
    "s2.c2#C": {
      "id": "s2.c2#C",
      "modelRef": "s2.c2",
      "name": "C",
      "steps": [
        {
          "id": "step_s2.c2#C_1",
          "isBackward": false,
          "target": {
            "model": "s1.c1",
          },
        },
        {
          "id": "step_s2.c2#C_2",
          "isBackward": true,
          "target": {
            "model": "s1.c1",
          },
        },
      ],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s1.c1": {
      "color": "primary",
      "description": null,
      "id": "s1.c1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
    "s2.c2": {
      "color": "primary",
      "description": null,
      "id": "s2.c2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {
      "async": {},
    },
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build activities with steps (object) 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [
        {
          "id": "step_s1#A_1",
          "isBackward": false,
          "target": {
            "activity": "s2#B",
          },
          "title": "title1",
        },
        {
          "id": "step_s1#A_2",
          "isBackward": true,
          "kind": "async",
          "target": {
            "activity": "s2#B",
          },
          "title": "title2",
        },
      ],
    },
    "s2#B": {
      "id": "s2#B",
      "modelRef": "s2",
      "name": "B",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {
      "async": {},
    },
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build activities with steps (string array) 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [
        {
          "id": "step_s1#A_1",
          "isBackward": false,
          "target": {
            "activity": "s2#B",
          },
        },
      ],
    },
    "s2#B": {
      "id": "s2#B",
      "modelRef": "s2",
      "name": "B",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {
      "async": {},
    },
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build activities with title 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [],
      "title": "Title A",
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build nested elements and relTo 1`] = `
{
  "activities": {},
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "green",
      "description": null,
      "id": "s1",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {
        "opacity": 10,
        "size": "lg",
      },
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s1.c1": {
      "color": "primary",
      "description": null,
      "id": "s1.c1",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {
        "textSize": "sm",
      },
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "s2": {
      "color": "green",
      "description": null,
      "id": "s2",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {
        "opacity": 10,
        "size": "lg",
      },
      "tags": null,
      "technology": null,
      "title": "s2",
    },
    "s2.c1": {
      "color": "primary",
      "description": null,
      "id": "s2.c1",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {
        "textSize": "sm",
      },
      "tags": null,
      "technology": null,
      "title": "Component s2.1",
    },
    "s2.c1.c2": {
      "color": "primary",
      "description": null,
      "id": "s2.c1.c2",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {
        "textSize": "sm",
      },
      "tags": null,
      "technology": null,
      "title": "Component s2.1.2",
    },
    "s2.c1.c2.c3": {
      "color": "primary",
      "description": null,
      "id": "s2.c1.c2.c3",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {
        "textSize": "sm",
      },
      "tags": null,
      "technology": null,
      "title": "c3",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {
    "rel1": {
      "id": "rel1",
      "source": "s2.c1.c2.c3",
      "target": "s1.c1",
      "title": "relation from s2.1.2.3 to s1.1",
    },
    "rel2": {
      "id": "rel2",
      "source": "s2.c1",
      "target": "s1.c1",
      "title": "relation from s2.1 to s1.1",
    },
    "rel3": {
      "id": "rel3",
      "source": "s1.c1",
      "target": "s2.c1.c2",
      "title": "relation from s1.1 to s2.1.2",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "component": {
        "style": {
          "shape": "browser",
          "textSize": "sm",
        },
      },
      "system": {
        "style": {
          "color": "green",
          "opacity": 10,
          "size": "lg",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build view  1`] = `
{
  "activities": {},
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "c1": {
      "color": "primary",
      "description": null,
      "id": "c1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "c2": {
      "color": "primary",
      "description": null,
      "id": "c2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c2",
    },
    "c3": {
      "color": "primary",
      "description": null,
      "id": "c3",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c3",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "1": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "1",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
      ],
      "tags": null,
      "title": "View 1",
    },
    "2": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "2",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
        {
          "include": [
            {
              "ref": {
                "model": "c2",
              },
              "selector": "children",
            },
          ],
        },
      ],
      "tags": null,
      "title": "view 2",
    },
    "3": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "3",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "ref": {
                "model": "c3",
              },
              "selector": "expanded",
            },
          ],
        },
      ],
      "tags": null,
      "title": "",
    },
  },
}
`;

exports[`Builder (style1) > should build viewOf  1`] = `
{
  "activities": {},
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "c1": {
      "color": "primary",
      "description": null,
      "id": "c1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "c2": {
      "color": "primary",
      "description": null,
      "id": "c2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c2",
    },
    "c2.c3": {
      "color": "primary",
      "description": null,
      "id": "c2.c3",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c3",
    },
    "c2.c3.c4": {
      "color": "primary",
      "description": null,
      "id": "c2.c3.c4",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c4",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "1": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "1",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
        {
          "include": [
            {
              "inout": {
                "ref": {
                  "model": "c2.c3",
                },
                "selector": "children",
              },
            },
          ],
        },
        {
          "exclude": [
            {
              "source": {
                "ref": {
                  "model": "c1",
                },
                "selector": "expanded",
              },
              "target": {
                "ref": {
                  "model": "c2.c3",
                },
                "selector": "children",
              },
            },
          ],
        },
      ],
      "tags": null,
      "title": "View 1",
      "viewOf": "c1",
    },
  },
}
`;
